--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:h2:mem:manishdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=h2root
-spring.datasource.password=Mani@9610
+spring.datasource.username=
+spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 #spring.jpa.defer-datasource-initialization=true
